# webgpu-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_linux.yaml  build_macos.yaml  build_wasm.yaml  build_windows.yaml  release_prebuilt.yaml
cmake/: apply_patch_idempotent.cmake  utils.cmake
examples/triangle/: CMakeLists.txt  main.cpp
glfw3webgpu/: CMakeLists.txt
glfw3webgpu/include/: glfw3webgpu.h
glfw3webgpu/src/: glfw3webgpu.c
